[tool.poetry]
name = "sample-sheet-validator"
version = "0.1.0"
description = "A streamlit based app for validating Illumina Nextseq 2000 sample sheet"
authors = ["thanhleviet <thanh.le-viet@quadram.ac.uk>"]
license = "GPLv3"
readme = "README.md"
# packages = [{include = "sample_sheet_validator"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
streamlit = "^1.22.0"
openpyxl = "^3.1.2"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
